<resources>
    <string name="app_name">GitExcercise</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="btn_submit">Submit</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="str_forgot_pass">Forgot Password</string>
    <string name="str_my_profile">My Profile</string>

</resources>